# seiten

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
app/: Cargo.toml
app/src/: lib.rs  types.rs
app/src/api/: episodes.rs  fuzzy_match.rs  mod.rs  scraping.rs  series.rs
app/src/store/: anidb.rs  episode.rs  mod.rs  series.rs
docs/: ANIDB_XML_EXAMPLE.xml  SEITEN_SPEC.md
entity/: Cargo.toml
entity/src/: anidb_dump_meta.rs  anidb_episode.rs  anidb_series.rs  anidb_title.rs  episode.rs  lib.rs  prelude.rs  series.rs  user.rs
frontend/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
style/: input.css
