[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
reqwest.workspace = true
chrono = { version = "0.4.42", features = ["serde"] }
serde = "1.0.228"
scraper.workspace = true
url.workspace = true

# SSR-only dependencies
axum = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:sea-orm",
]
