[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
entity = { path = "../entity" }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
simple_logger.workspace = true
tokio.workspace = true

# TODO: remove unneeded features to speed up compile time
tower.workspace = true
tower-http.workspace = true
log.workspace = true
reqwest = { version = "0.13.1", features = ["json"] }
url = "2.5.4"
reactive_stores = "0.3.1"
