[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
entity = { path = "../entity" }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
tokio.workspace = true
reqwest.workspace = true
flate2.workspace = true
chrono.workspace = true
